src/objects/INT_SETUP__c.object
<CustomObject>
    <description>Sets up an Salesforce Object Type for external system Integration purpose.</description>
    <fields>
        <fullName>Allowed_Schedulables__c</fullName>
        <description>In case the integration is triggerred from an Apex Schedulable, Specifies the set of Apex schedulable classes allowed for integrations.
If no value is selected, integrations will be allowed from all schedulables.
Here is an example:
CM_ETMF_Schedulable will be scheduled at specific times. There is a common Schedulable (CM_Integration_Schedulable) that is scheduled at specific times.
In case, you want to skip ETMF integration logic processed by CM_Integration_Schedulable,
you must not include CM_Integration_Schedulable for ETMF integrations for a specific Type_API_Name__c</description>
        <inlineHelpText>In case the integration is triggerred from an Apex Schedulable, Specifies the set of Apex schedulable classes allowed for integrations.
If no value is selected, integrations will be allowed from all schedulables.</inlineHelpText>
        <label>Allowed Schedulables</label>
        <picklist>
            <picklistValues>
                <fullName>CM_ETMF_Schedulable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM_CTMS_Schedulable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COM_IntegrationSchedulable</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the integration configuration is enabled. Integration services will check this value before performing any integration invocations.</description>
        <inlineHelpText>Determines if the integration configuration is enabled. Integration services will check this value before performing any integration invocations.</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Integration System</label>
        <referenceTo>INT_SYSTEM__c</referenceTo>
        <relationshipName>Type_And_System_Integration_Setups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_API_Name__c</fullName>
        <description>API Names of the standard/custom objects</description>
        <inlineHelpText>API Names of the standard/custom objects</inlineHelpText>
        <label>Type API Name</label>
        <picklist>
            <picklistValues>
                <fullName>Apttus__APTS_Agreement__c</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Integration Setup</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>